# CMake-Compilation-with-Raylib

./: CMakeLists.txt  Dockerfile  Main.cpp  README.md
.devcontainer/: devcontainer.json
bash_scripts/: build.sh
